# mycobot_280pi_ws

./: .gitignore  README.md
src/mycobot_280pi/: README.md
src/mycobot_280pi/mycobot_280pi/: CMakeLists.txt  README.md  package.xml
src/mycobot_280pi/mycobot_280pi_bringup/: CMakeLists.txt  package.xml
src/mycobot_280pi/mycobot_280pi_bringup/scripts/: mycobot_280pi_gazebo.sh  mycobot_280pi_gazebo_and_moveit.sh
src/mycobot_280pi/mycobot_280pi_description/: CMakeLists.txt  README.md  package.xml
src/mycobot_280pi/mycobot_280pi_description/launch/: robot_state_publisher.launch.py
src/mycobot_280pi/mycobot_280pi_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro
src/mycobot_280pi/mycobot_280pi_description/urdf/mech/: adaptive_gripper.urdf.xacro  mycobot_280pi_arm.urdf.xacro
src/mycobot_280pi/mycobot_280pi_description/urdf/robots/: mycobot_280pi.urdf.xacro
src/mycobot_280pi/mycobot_280pi_description/urdf/sensors/: intel_rgbd_cam_d435.urdf.xacro
src/mycobot_280pi/mycobot_280pi_gazebo/: CMakeLists.txt  package.xml
src/mycobot_280pi/mycobot_280pi_gazebo/config/: ros_gz_bridge.yaml
src/mycobot_280pi/mycobot_280pi_gazebo/launch/: mycobot_280pi.gazebo.launch.py
src/mycobot_280pi/mycobot_280pi_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mycobot_280pi/mycobot_280pi_moveit2_config/config/mycobot_280pi/: kinematics.yaml  mycobot_280pi.srdf
src/mycobot_280pi/mycobot_280pi_moveit2_config/launch/: move_group.launch.py
src/mycobot_280pi/mycobot_280pi_moveit2_control/: package.xml  setup.cfg  setup.py
src/mycobot_280pi/mycobot_280pi_moveit2_control/mycobot_280pi_moveit2_control/: sync_plan.py  test.py
src/mycobot_280pi_adaptive_gripper_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
src/mycobot_280pi_adaptive_gripper_moveit2/config/: firefighter.srdf  firefighter.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
src/mycobot_280pi_adaptive_gripper_moveit2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/mycobot_280pi_adaptive_gripper_moveit2_control/: package.xml  setup.cfg  setup.py
src/mycobot_280pi_adaptive_gripper_moveit2_control/launch/: sync_plan_pi.launch.py
src/mycobot_280pi_adaptive_gripper_moveit2_control/mycobot_280pi_adaptive_gripper_moveit2_control/: sync_plan_pi.py  test.py
