<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_280pi_moveit2_control</name>
  <version>0.0.0</version>
  <description>MoveIt2 control scripts for syncing myCobot 280 Pi hardware with simulation and planning.</description>
  <maintainer email="174347826+bt-nav@users.noreply.github.com">btnav</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>mycobot_280pi_description</exec_depend>
  <exec_depend>mycobot_280pi_moveit2_config</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
